--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
@@ -97,6 +97,9 @@ error_page {{ k }} {{ v }};
     proxy_set_header X-Forwarded-For $http_x_forwarded_for;
     {% endif %}
 
+    # prevent the browser from doing MIME-type sniffing
+    proxy_set_header X-Content-Type-Options nosniff;
+
     # newrelic-specific header records the time when nginx handles a request.
     proxy_set_header X-Queue-Start "t=${msec}";
 
