--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms-preview.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms-preview.j2
@@ -40,6 +40,10 @@ server {
     proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
     proxy_set_header X-Forwarded-For $http_x_forwarded_for;
     {% endif %}
+
+    # prevent the browser from doing MIME-type sniffing
+    proxy_set_header X-Content-Type-Options nosniff;
+
     proxy_set_header Host $http_host;
 
     proxy_redirect off;
